--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "phaser": "^3.23.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-jitsi": "^1.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-virtualized": "^9.21.2",
