--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-jitsi": "^1.0.3",
+    "react-modal": "^3.11.2",
     "react-scripts": "3.4.1",
     "react-virtualized": "^9.21.2",
     "react-window": "^1.8.5",
